--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,16 @@
 			<version>1.18.10</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>1.5.23</version>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
